--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@metamask/logo": "^3.1.1",
     "aos": "^3.0.0-beta.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
